task and user add
