# routes/task.routes.js
@@ -1,0 +1,12 @@
+const controller = require("../controllers/task.controller");
+const { checkDuplicate } = require("../middlewares");
+const router = require("express").Router();
+
+router.get("", controller.getAll);
+router.get("/:taskId", controller.findOne);
+router.post("", controller.create);
+router.put("/:taskId",  controller.update);
+router.delete("/:taskId",  controller.delete);
+router.delete("/", controller.deleteAll);
+
+module.exports = router;
